--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,11 @@ ul li {
   .profile-image {
     margin: 1rem 0;
   }
+  
+  .parallel-navbar {
+    flex-direction: column;
+    align-items: center; 
+  }
 }
 
 .about-me {
@@ -208,6 +213,7 @@ ul li {
 /* Social Media Navbar */
 .social-navbar {
   display: flex;
+  /* flex-wrap: wrap; */
   gap: 1.5rem;
   margin-bottom: 0.5rem; /* Add spacing below social links */
 }
